[MIM-9] Material Design Bottom Navigation 적용하기
- menu recource 생성
- layout.xml 에 bottom navigation 사용하기
- Navigation Item Select Listener 달기
- 디자인 커스텀 하기 styles 적용

정리된 notion - https://elfin-fin-b6d.notion.site/Bottom-navigation-Material-Design-c29d4742158d484d974b77c9e68052dd

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">MorningIsMiracle</string>
+    <string name="pageHomeTitle">홈</string>
+    <string name="pagePlanTitle">계획</string>
+    <string name="pageTagTitle">태그</string>
+    <string name="pageStatisticsTitle">통계</string>
 </resources>
