[MIM-13] TagFragment UI, 각 Fragment의 Title UI 개발
임시 Mock data로 TagFragment UI 를 개발
각 Fragment의 Title UI 개발
Tag RecyclerView를 위한 Adapter 구현

TODO - recycler view 경계 자연스럽게 구현하기

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="pagePlanTitle">계획</string>
     <string name="pageTagTitle">태그</string>
     <string name="pageStatisticsTitle">통계</string>
+    <string name="planTitleToday">Today</string>
+    <string name="planTitleData">%1$d년 %2$02d월 %2$02d일</string>
 </resources>
