[MIM-17] StatisticsFragment view 구현
통계화면을 구현합니다.
필요한 drawable 구현,
drawable 에 버전 상관없이 setTint할수있는 공통 util구현,
mutate를 사용하여 한 drawable resource를 함께 사용하여 색상이 의도대로 동작하지않는 문제를 예방

TODO - 이번달 구현, 실제 데이터로 연결

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="pageStatisticsTitle">통계</string>
     <string name="planTitleToday">Today</string>
     <string name="planTitleData">%1$d년 %2$02d월 %2$02d일</string>
+    <string name="thisWeekTitle">이번주</string>
+    <string name="statisticsSubTitle">달성</string>
+    <string name="myDescription100">나는 <b>완벽한 J</b>다</string>
 </resources>
