[MIM-22] HomeViewModel, PlanRepository 생성 및 하루 계획 list받기 기능 연결하기
DataResult - 데이터 success, error 상태와 데이터 전달을위한 sealed class 생성
GetPlanListUseCase - UseCase Class로 생성하기
HomeViewModel - viewModel생성하여 UseCase 호출하여 data 받기
HomeFragment - 데이터가 없는경우 view 구현
RepositoryModule - DI 를 위한 Module 생성, Repository Interface와 Impl 간의 binding을 위함

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="thisWeekTitle">이번주</string>
     <string name="statisticsSubTitle">달성</string>
     <string name="myDescription100">나는 <b>완벽한 J</b>다</string>
+    <string name="addPlanText">오늘 계획 추가하기</string>
+    <string name="noPlanText">앗! 오늘의 계획이 아직 없네요\n계획을 추가해주세요!</string>
 </resources>
