[MIM-27] Tag 추가하기 Bottom Sheet UI 구현
- BottomSheetDialogFragment 를 이용하여 Bottom Sheet구현
- Material Text fields 사용
- ColorList RecyclerView로 구현
- DiffUtil을 사용하나 Color 선택시 notifyDataSetChanged 를 호출한다 data가 하나씩만 바뀌는데 뷰를 모두 다시그려야하기때문
- BottomSheetDialogFragment round corner style 적용

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
     <string name="myDescription100">나는 <b>완벽한 J</b>다</string>
     <string name="addPlanText">오늘 계획 추가하기</string>
     <string name="noPlanText">앗! 오늘의 계획이 아직 없네요\n계획을 추가해주세요!</string>
+
+    <string name="addTagTitle">새로운 테그 추가하기</string>
+    <string name="addTagHintText">테그 이름</string>
+    <string name="addTagButtonText">테그 추가하기</string>
 </resources>
