[MIM-35] Plan 추가 BottomSheet UI 구현
AddPlanBottomSheetDialogFragment 생성
AddPlanBottomSheetDialogFragment의 UI구현,
내부 recyclerView item Ui구현,
recyclerView Adapter구현

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -18,4 +18,7 @@
     <string name="changeTagButtonText">테그 색상 변경하기</string>
     <string name="noTagText">테그를 추가해서 효과적으로 계획을 세워보세요!\n운동, 공부, 독서 등 뭐든지 좋아요!</string>
     <string name="noTagName">테그 이름은 필수입니다</string>
+    <string name="addPlanHintText">계획 이름</string>
+    <string name="addPlanBtnText">계획 추가하기</string>
+    <string name="nonTagText">태그 없음</string>
 </resources>
