--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="pageTagTitle">태그</string>
     <string name="pageStatisticsTitle">통계</string>
     <string name="planTitleToday">Today</string>
-    <string name="planTitleData">%1$d년 %2$02d월 %2$02d일</string>
+    <string name="planTitleData">%1$d년 %2$02d월 %3$02d일</string>
     <string name="thisWeekTitle">이번주</string>
     <string name="statisticsSubTitle">달성</string>
     <string name="myDescription100">나는 <b>완벽한 J</b>다</string>
@@ -21,4 +21,6 @@
     <string name="addPlanHintText">계획 이름</string>
     <string name="addPlanBtnText">계획 추가하기</string>
     <string name="nonTagText">태그 없음</string>
+
+    <string name="laterWarningText">완료한 계획은 미룰 수 없어요!</string>
 </resources>
