[MIM-65] 오늘 이전날짜에 계획 추가할 수 없도록 막기
오늘 이전날짜에 계획 추가할 수 없도록 막기

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="nonTagText">태그 없음</string>
 
     <string name="laterWarningText">완료한 계획은 미룰 수 없어요!</string>
+    <string name="addPlanWarningText">이미 지난 날에 계획을 추가 할 수 없어요!</string>
     <string name="statisticMonthTitle">이번달</string>
 
     <!-- statistics -->
