[MIM-67] 앱 이름 변경

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MorningIsMiracle</string>
+    <string name="app_name">나는 J다</string>
     <string name="pageHomeTitle">홈</string>
     <string name="pagePlanTitle">계획</string>
     <string name="pageTagTitle">태그</string>
